# Latest release can be found here:
# https://github.com/bazelbuild/rules_python/releases.
bazel_dep(name = "rules_python", version = "0.33.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12", is_default = True)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "bytemachine_deps",
    python_version = "3.12",
    requirements_lock = "//third_party:requirements.txt",
)
use_repo(pip, "bytemachine_deps")
